tweak swagger ops
